--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   ],
   "main": "src/index.js",
   "dependencies": {
+    "@material-ui/core": "4.11.3",
+    "@material-ui/data-grid": "4.0.0-alpha.18",
+    "@material-ui/styles": "4.11.3",
     "material-ui": "1.0.0-beta.34",
     "react": "17.0.1",
     "react-dom": "17.0.1",
